# MasterDataManagement

./: .gitignore  MDM_SPEC_Near-Real-Time.md  README.md  github-workflow-verification_v1.sh  manifest.yml  post_deploy.sql  pre_deploy.sql  upload_data.sh
.github/workflows/: update-local-repo.yml
app/: streamlit_app.py
nrt/: .env.example  docker-compose.yml  pyproject.toml
nrt/app/: audit_viewer.py  streamlit_app.py
nrt/schema/: 003_audit_tables.sql  004_suppressions_table.sql
nrt/src/nrt_mdm/: api.py  audit.py  batch_resolve.py  consumer.py  pipeline.py  producer.py  resolver.py  unmatch.py  upsert.py
nrt/tests/: bench_get_tps.py  e2e_test.py  e2e_unmatch.py  run_e2e.sh  run_e2e_unmatch.sh  test_audit.py
nrt/tests/regression/: conftest.py  contracts.py  manifest.py  test_boundaries.py  test_contracts.py  test_interfaces.py  test_matrix.py  test_unmatch.py
shared/scripts/: generate_test_data.py
sources/definitions/: analytics.sql  infrastructure.sql  serve.sql  views.sql
sqlunit/: tests.sqltest
tests/: mdm_showcase.ipynb  test_golden_rules.sql
